change route names for consistency
