# server/api/controllers/user/routes.js
@@ -5,4 +5,4 @@ import controller from './controller';
 export default express
   .Router()
   .get('/', authHandler, controller.getUserDetails)
-  .post('/add-address', authHandler, controller.addAddress);
+  .post('/updateAddress', authHandler, controller.updateAddress);
